# ibis-profiling

./: .envrc  .gitignore  GEMINI.md  README.md  ibis_1M_full.json  loan_profile.html  loan_profile.json  orchestration.conf  pyproject.toml  run.sh  test.py  ydata_1M_full.json  ydata_1M_stats.json
.gemini/: settings.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: METRICS.md  agent_protocol.md  benchmarking_protocol.md  n_unique_performance_analysis.md  performance_backtest_v0.1.6.md  performance_benchmark_matrix.json  performance_benchmark_matrix.md  unique_count_discrepancy.md
docs/agent_conversations/: 2026-03-10_ibis_profiler_implementation.json  2026-03-11_benchmarking_optimization.json  2026-03-11_benchmarking_parity.json  2026-03-11_coverage_improvement.json  2026-03-11_documentation_update.json  2026-03-11_excel_and_deps.json  2026-03-11_feature_gap_closure.json  2026-03-11_fix_matrix_and_duration.json  2026-03-11_histogram_fix.json  2026-03-11_missing_values_fix.json  2026-03-11_screenshot_fix.json  2026-03-11_screenshot_tool_restored.json  2026-03-11_support_custom_title.json  2026-03-11_true_histograms.json  2026-03-12_heatmap_title_alignment.json  2026-03-12_missing_values_fix_completion.json  2026-03-12_pairwise_interactions.json  2026-03-12_standardize_naming_and_fix_alerts.json  2026-03-12_template_standardization_and_ydata_theme.json  2026-03-12_visual_centering_and_alignment_fix.json  2026-03-12_ydata_theme_completion.json  2026-03-12_ydata_theme_enhancements.json  2026-03-13_gitignore_update.json  2026-03-13_pypi_prep.json  2026-03-13_remove_redundant_auto_corr.json  2026-03-15_readme_and_visual_refresh.json  2026-03-19_cli_implementation.json  2026-03-19_ydata_theme_interactions.json  2026-03-21_add_ty_precommit.json  2026-03-21_address_code_review_findings.json  (+57 more)
scripts/: backtest_perf.py  bench_logical_inference_comparison.py  bench_logical_inference_sampling.py  benchmark_excel.py  benchmark_ibis_1M.py  benchmark_ibis_20M.py  benchmark_loan_data.py  benchmark_monotonicity.py  benchmark_n_unique.py  benchmark_n_unique_50M.py  benchmark_parallel_comprehensive.py  benchmark_parallel_safety.py  benchmark_reclassification_fix.py  benchmark_runner.py  benchmark_wide_table.py  benchmark_worker.py  benchmark_ydata_1M.py  bootstrap.sh  build_templates.py  bump_cache_buster.py  check_esbuild_cooldown.py  check_tdd.sh  compare_5M.py  compare_benchmark_stats.py  compare_jsons.py  compare_outputs.py  compare_ydata.py  compare_ydata_simple.py  diagnose_20M_10cols.py  gen_20M_13cols.py  gen_20M_20cols.py  generate_10M_empty_string_report.py  generate_10m_20col_customer_data.py  generate_alert_data.py  generate_bench_data.py  generate_bench_data_varied.py  generate_bench_reclass_data.py  generate_comprehensive_reports.py  generate_financial_reports.py  generate_fresh_reports.py  (+35 more)
tests/: conftest.py  repro_parallel_safety.py  reproduce_missing_viz.py  reproduce_nan_interactions.py  reproduce_stddev_error.py  reproduce_truncation_warning.py  test_00_ydata_theme.py  test__version.py  test_advanced_features.py  test_alerts.py  test_alerts_engine.py  test_batch_aggregates.py  test_cli.py  test_cli_format_override.py  test_code_review_fixes.py  test_complex_types_profiling.py  test_config.py  test_constants.py  test_correlation_determinism.py  test_correlation_optimization.py  test_correlation_sampling_clamp.py  test_correlation_zero_variance.py  test_correlations.py  test_correlations_cap.py  test_count_column_robustness.py  test_coverage_gap_closure.py  test_csp_online.py  test_csp_tightening.py  test_customer_logical_types.py  test_data_integrity.py  test_datetime_histograms.py  test_datetime_robustness.py  test_decimal_overflow.py  test_domain_logical_types.py  test_duplicates_threshold.py  test_e2e_empty_strings_display.py  test_e2e_frontend.py  test_e2e_frontend_snapshot.py  test_e2e_visual_regression.py  test_empty_dataset_unique.py  (+73 more)
tools/: benchmark.py  datasets.py  reports.py
(+242 files in other folders)
