[project]
name = "ibis-profiling"
dynamic = ["version"]
description = "Ultra-high-performance data profiling natively for Ibis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "David Beall", email = "6121439+beallio@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
keywords = ["ibis", "profiling", "eda", "data-analysis", "sql", "duckdb", "polars", "pandas"]
dependencies = [
    "click>=8.0.0",
    "duckdb>=1.5.0",
    "fastexcel>=0.11.5",
    "ibis-framework>=12.0.0",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyarrow-hotfix>=0.7",
    "pydantic>=2.12.5",
    "pygments>=2.20.0",
    "psutil>=7.0.0",
]

[project.scripts]
ProfileReport = "ibis_profiling.cli:main"

[project.urls]
Homepage = "https://github.com/beallio/ibis-profiling"
Repository = "https://github.com/beallio/ibis-profiling"
Issues = "https://github.com/beallio/ibis-profiling/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ibis_profiling"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ibis_profiling",
    "README.md",
    "LICENSE",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "/tmp/ibis-profiling/.uv_cache"

[tool.ruff]
line-length = 100
cache-dir = "/tmp/ibis-profiling/.ruff_cache"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term"
cache_dir = "/tmp/ibis-profiling/.pytest_cache"
pythonpath = ["src"]

[tool.coverage.run]
data_file = "/tmp/ibis-profiling/.coverage"

[dependency-groups]
dev = [
    "faker>=40.8.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "setuptools>=70.0.0",
    "ty>=0.0.24",
    "xlsxwriter>=3.2.9",
    "ydata-profiling>=4.18.1",
]
